moved top text up on mobile fixed

--- a/styles.css
+++ b/styles.css
@@ -197,7 +197,7 @@ section {
     font-size: 18pt;
     justify-content: center;
     /* padding-left: 22%; */
-    margin-top: 5vh;
+    /* padding-top: vh; */
     padding-bottom: 10px;
   }
 
